DD Activity text overlap issue fixed.

--- a/www/css/course_widget.css
+++ b/www/css/course_widget.css
@@ -304,7 +304,7 @@ body > li.ui-draggable.sequence-item a {font-size:20px; font-family:HelveticaNeu
     display: table-cell;
     font-family: HelveticaNeue,arial;
     font-size: 20px;
-    height: 87px;
+    height: auto;
     padding: 5px;
   /*  text-shadow: 0 1px 1px #FFFFFF;  */
     vertical-align: middle;
